# EastSimulation

./: .gitignore  CMakeLists.txt  Main.cc  Plot.py  Readme.txt  plot.ipynb  vis.mac
AD_pip/: Analysis.py  Constants.py  Converter.py  Plotting.py  ReaderFromGeant.py
AD_pip/Detectors/: BC501A_EAST.py  EJ301_EAST.py
ObjConverse/: Converse.hh
PyFunctions/: ADConverter.py  Analysis.py  Constants.py  Plotting.py  RW.py  ReaderFromGeant.py
PyFunctions/PyDetectors/: BC501A_EAST.py  EJ301_EAST.py
headers/: ActionInitialization.hh  Construction.hh  EnergyDistribution.hh  EventAction.hh  Parameters.hh  Physics.hh  Run.hh  RunAction.hh  SteppingAction.hh  generator.hh
sources/: ActionInitialization.cc  Construction.cc  CreateLogicalVolume.cc  EnergyDistribution.cc  EventAction.cc  Physics.cc  RunAction.cc  SteppingAction.cc  generator.cc
sys_data/: Carbon_cross_section.txt
sys_data/EnergyDependanceDD_EAST/: Flux1.txt  Flux2.txt  Flux3.txt  Flux4.txt  Flux5.txt
